--- a/resources/views/layout/layout.edge
+++ b/resources/views/layout/layout.edge
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mon blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
 
+<body style="background: #001E26;font-family:'Poppins', sans-serif;">
 
     <section class="main">
-        <div class="w-full h-15  flex justify-center align-items-center bg-blue-600">
-            <h2>Mon blog</h2>
-        </div>
+
+        @include('components/navbar')
     </section>
 
     <div>
         @section('body')
-          
+
         @endsection
     </div>
-    
+
 </body>
+
 </html>
