--- a/resources/views/components/navbar.edge
+++ b/resources/views/components/navbar.edge
@@ -23,11 +23,11 @@
                             aria-current="page">Blog</a>
 
 
-                        <a href="#"
+                        <a href=" {{route('ContactController.index')}} "
                             class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Contact</a>
 
-                        <a href="#" class="text-gray font-bold bg-white px-3 py-2 rounded-md text-sm">Inscription</a>
-                        <a href="#"
+                        <a href=" {{route('AuthController.goLogin')}} " class="text-gray font-bold bg-white px-3 py-2 rounded-md text-sm">Inscription</a>
+                        <a href=" {{route('AuthController.goRegister')}} "
                             class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Connexion</a>
                     </div>
                 </div>
