--- a/resources/views/blog/index.edge
+++ b/resources/views/blog/index.edge
@@ -3,7 +3,7 @@
 @section('body')
 
 
-<div class="w-full flex h-screen  justify-center">
+<div class="w-full flex h-auto  justify-center">
     <div class=" w-2/4 h-full ">
         <div class="flex flex-col m-2 ">
             @each(post in posts)
@@ -56,6 +56,8 @@
             @end
         </div>
     </div>
+
 </div>
+@include('components/pagination')
 
 @endsection
