Fix: Remember me

--- a/resources/views/components/navbar.edge
+++ b/resources/views/components/navbar.edge
@@ -32,8 +32,8 @@
                             </form>
                            
                         @else 
-                            <a href=" {{route('AuthController.goLogin')}} " class="text-gray font-medium bg-white px-3 py-2 rounded-md text-sm">Inscription</a>
-                            <a href=" {{route('AuthController.goRegister')}} "class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Connexion</a>
+                            <a href=" {{route('AuthController.goRegister')}} " class="text-gray font-medium bg-white px-3 py-2 rounded-md text-sm">Inscription</a>
+                            <a href=" {{route('AuthController.goLogin')}} "class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Connexion</a>
                             <a href=" {{route('BlogController.createPostPage')}} "class="bg-white font-medium px-3 py-2 rounded-md text-sm font-medium">Créer un post</a>
                         @endif
                       
