--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -15,7 +15,7 @@
         name: 'email'
     })
       
-    <form action="" method="post">
+    <form action="/user/register" method="post">
         @!component('components/form', {
             name: "Nom d'utilisateur:", 
             title: 'username', 
