--- a/resources/views/blog/edit.edge
+++ b/resources/views/blog/edit.edge
@@ -4,6 +4,15 @@
   <div class="w-full h-screen flex justify-center items-center">
     <div class="h-full bg-white w-1/3 ">
 
+      @!component('components/flash', {
+        name: 'title'
+      })
+      @!component('components/flash', {
+        name: 'description'
+      })
+      @!component('components/flash', {
+        name: 'content'
+      })
       <form action="/create/post" method="post" enctype="application/x-www-form-urlencoded">
         @!component('components/form', {
           name: "Nom du post:", 
