--- a/resources/views/blog/index.edge
+++ b/resources/views/blog/index.edge
@@ -5,6 +5,13 @@
     auth: auth
 })
 
+<div class="w-full h-auto flex justify-center items-center">
+    @!component('components/flash', {
+        error: 'unauthorized'
+    })
+</div>
+
+
 <div class="w-full flex h-auto  justify-center">
     <div class=" w-2/4 h-full ">
         <div class="flex flex-col m-2 ">
